2008-11-26  Anders Carlsson  <andersca@apple.com>

        Reviewed by Dan Bernstein.

        Add plug-in host .defs.

        * Plugins/Hosted/WebKitPluginAgent.defs: Added.
        * Plugins/Hosted/WebKitPluginAgentReply.defs: Added.
        * Plugins/Hosted/WebKitPluginClient.defs: Added.
        * Plugins/Hosted/WebKitPluginHost.defs: Added.
        * Plugins/Hosted/WebKitPluginHostTypes.defs: Added.

2008-11-26  Anders Carlsson  <andersca@apple.com>

        Reviewed by Mark Rowe and Kevin Decker.

        Minor plug-in changes.
        
        * Plugins/WebBaseNetscapePluginView.h:
        Add add/remove observer method declarations.
        
        * Plugins/WebBaseNetscapePluginView.mm:
        (-[WebBaseNetscapePluginView isFlipped]):
        Move this down from WebNetscapePluginView.
        
        * Plugins/WebNetscapePluginPackage.h:
        * Plugins/WebNetscapePluginPackage.m:
        (-[WebNetscapePluginPackage pluginHostArchitecture]):
        Getter for the plug-in host architecture.
        
        * Plugins/WebNetscapePluginView.mm:

2008-11-25  Dan Bernstein  <mitz@apple.com>

        Reviewed by Mark Rowe.

        - include the text direction submenu in context menus when appropriate

        * WebView/WebPreferences.mm:
        (+[WebPreferences initialize]): Changed the default
        textDirectionSubmenuInclusionBehavior to "automatically", which includes
        the menu when the selection is confined to a single paragraph the either
        has right-to-left base writing direction or contains right-to-left or
        embedded text. Left the default for Tiger and Leopard to be "never".

2008-11-24  Darin Fisher  <darin@chromium.org>

        Fix bustage.

        * History/WebHistory.mm:

2008-11-24  Glenn Wilson  <gwilson@chromium.org>

        Reviewed by Alexey Proskuryakov.

        http://bugs.webkit.org/show_bug.cgi?id=15643

        Added API support for the "trailing whitespace" work-around.  This includes an APIs