@@ -1,0 +1,9 @@
+#ifndef WebKitPluginHostTypes_h
+#define WebKitPluginHostTypes_h
+
+typedef uint8_t * plist_bytes_t;
+typedef uint8_t * application_name_t;
+
+typedef char * data_t;
+
+#endif // WebKitPluginHostTypes_h
